# rosbag_editor

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
desktop/: resources.qrc  rosbag_editor.desktop.in
scripts/: rosbag_editor.bash.in
src/: filter_frames.cpp  filter_frames.h  filter_frames.ui  main.cpp  rosbag_editor.cpp  rosbag_editor.h  rosbag_editor.ui
